(add new changes on top of this file)

Änderungen
----------

v0.9.2 (??.09.2010)
 * ListBuilder renders character browser
 * Bugfix BaseFilter: CharBrowser works now with special characters (Thanks to Michael Wagner)

v0.9.1 (13.09.2010)
 * SearchBase: ignore forcewrapper for count

v0.9.0 (03.09.2010)
 * Chart builder for extension pbimagegraph

v0.8.9 (09.08.2010)
 * All references to extensions lib/div removed.
 * PageBrowser: Respect maximum list limit.
 * tx_rnbase_controller: Verbose error messages possible if label found. Thanks to Lars Heber!
 * tx_rnbase_controller: Sending error mailings fixed. Thanks to Lars Heber!
 * Default file based cache can be activated in extension configuration.
 * Action based caching interface for frontend plugins. Not finished yet!
 * tx_rnbase_util_Link: KeepVars of other extension can be configured. Thanks to Pavel Klinkov! 
  linkcfg.useKeepVars.add = tx_ttnews::ttnews, tx_ttnews::*

v0.8.8 (17.07.2010)
 * Avoid warnings for NumberFormat called with string values
 * new class tx_rnbase_maps_Util

v0.8.7 (05.07.2010) (not released)
 * tx_rnbase_util_Files::getFileResource() works in BE

v0.8.6 (03.07.2010)
 * prepareTSFE: timetrack init before tsfe
 * CharBrowser: new option to place special fields at last
 * PageBrowser: init link by Typoscript

v0.8.5 (29.06.2010) (not released)
 * ListBuilder: support for multiple list subparts in a single template

v0.8.4 (28.06.2010) (not released)
 * tx_rnbase_maps_google_Map: JS initialize fixed
 * tx_rnbase_maps_Coord: variables fixed
 * $_SERVER is included in error mail
 * Visitors for ListBuilder
 * New method tx_rnbase_util_Templates::getSubpartFromFile()

v0.8.3 (07.06.2010) (not released)
 * New marker ###.._TOTALLINE### in ListBuilder. It shows current line number of a large list with pagebrowser.
 * tx_rnbase_util_SearchBase: New option "callback" for doSelect

v0.8.2 (07.06.2010) (not released)
 * mod_Tables: getHeadline() uses title string as fallback