@@ -6,6 +6,7 @@
 v0.9.2 (??.09.2010)
  * ListBuilder renders character browser
  * Bugfix BaseFilter: CharBrowser works now with special characters (Thanks to Michael Wagner)
+ * BaseController: new option ignoreActionParam to disable action setting by url parameters
 
 v0.9.1 (13.09.2010)
  * SearchBase: ignore forcewrapper for count
